force-app/main/default/objects/Manage_Package_License__c/Manage_Package_License__c.object-meta.xml
<CustomObject>
    <label>Managed Package License Request</label>
    <nameField>
        <displayFormat>MPL-{000000}</displayFormat>
        <label>Manage Package License Name Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Package License Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>