force-app/main/default/objects/Manage_Package_License__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Request for License Approved Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>