force-app/main/default/objects/Manage_Package_License__c/fields/Resent_Invite__c.field-meta.xml
<CustomField>
    <fullName>Resent_Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>35859454</description>
    <label>Resent Invite</label>
    <type>Checkbox</type>
</CustomField>