force-app/main/default/objects/Manage_Package_License__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User to which license needs to be added</description>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manage_Package_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>