force-app/main/default/objects/Manage_Package_License__c/validationRules/Oracle_Requests_Must_Go_to_SFDC.validationRule-meta.xml
<ValidationRule>
    <fullName>Oracle_Requests_Must_Go_to_SFDC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Request_Status__c, &apos;Approved&apos;), Package_Name__c = &apos;Oracle_CPQ&apos;, NOT(CONTAINS($Profile.Name, &apos;System Admin&apos;)))</errorConditionFormula>
    <errorMessage>Only SFDC COE can approve Oracle license requests</errorMessage>
</ValidationRule>