force-app/main/default/objects/Manage_Package_License__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <description>Rejection Reason Required when Status = Rejected</description>
    <errorConditionFormula>AND(ISPICKVAL( Request_Status__c ,&apos;Rejected&apos; ),ISBLANK(TEXT( Rejection_Reason__c )))</errorConditionFormula>
    <errorMessage>Rejection Reason Required is required when Request Status is Rejected</errorMessage>
</ValidationRule>