force-app/main/default/objects/Manage_Package_License__c/listViews/Equifax.listView-meta.xml
<ListView>
    <fullName>Equifax</fullName>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Package_Name__c</field>
        <operation>equals</operation>
        <value>ForsevaTRM</value>
    </filters>
    <label>Equifax</label>
</ListView>