force-app/main/default/objects/Manage_Package_License__c/listViews/Sales_Data_Steward_Queue_Manage_Package_License.listView-meta.xml
<ListView>
    <fullName>Sales_Data_Steward_Queue_Manage_Package_License</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Package_Name__c</columns>
    <columns>User_Name__c</columns>
    <columns>Request_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <label>Sales Enablement Queue</label>
    <queue>Sales_Data_Steward_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>