force-app/main/default/objects/Manage_Package_License__c/listViews/Salesgenie.listView-meta.xml
<ListView>
    <fullName>Salesgenie</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Package_Name__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Requestor__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>User_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Package_Name__c</field>
        <operation>contains</operation>
        <value>Salesgenie</value>
    </filters>
    <label>Salesgenie</label>
</ListView>